:construction: Add permission checker for SuperiorSkyBlock2